Created using Jupyter Lab

--- a/Llama2_RAG_bot.ipynb
+++ b/Llama2_RAG_bot.ipynb
@@ -2034,7 +2034,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 246,
+   "id": "41e24605-4089-4466-abe6-b3eec6b9d407",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clear_chroma_db(db):\n",
+    "    if db is None:\n",
+    "        return\n",
+    "    \n",
+    "    try:\n",
+    "        db.delete_collection()\n",
+    "    except:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
    "id": "8c963f5e-565b-45bc-96dc-fa9ae6178bb7",
    "metadata": {},
    "outputs": [
@@ -2063,7 +2080,9 @@
       "\n",
       "Course will be held between Jan 8 â€“ Apr 12, 2024: Thu, 12:30â€“2:20 p.m. @ SRYC3170 . Tutorial sessions will be held weekly after the course @ SRYC3050\n",
       "\n",
-      "Instructor: Dr. O. Nilay Yalcin oyalcin@sfu.ca , Office Hours: Wednesdays 12:30 â€“ 2:30pm @SRYC 2282 (by email appointment only, contact at least 1 day before)â€‹\n"
+      "Instructor: Dr. O. Nilay Yalcin oyalcin@sfu.ca , Office Hours: Wednesdays 12:30 â€“ 2:30pm @SRYC 2282 (by email appointment only, contact at least 1 day before)â€‹\n",
+      "\n",
+      "TA: Maryiam Zahoor maryiam_zahoor@sfu.ca, Office Hours: Wednesdays SRYC 3120, 11am-12pm\n"
      ]
     }
    ],
@@ -2072,7 +2091,7 @@
     "# https://python.langchain.com/docs/integrations/vectorstores/chroma/\n",
     "\n",
     "# load the sample document \n",
-    "loader = TextLoader(\"samples/481_syllabus.txt\")\n",
+    "loader = TextLoader(\"./samples/481_syllabus.txt\")\n",
     "documents = loader.load()\n",
     "\n",
     "# split it into chunks\n",
@@ -2080,6 +2099,7 @@
     "docs = text_splitter.split_documents(documents)\n",
     "\n",
     "# load it into Chroma\n",
+    "clear_chroma_db(db)\n",
     "db = Chroma.from_documents(docs, embedding_function)\n",
     "\n",
     "# query it\n",
@@ -2100,7 +2120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 254,
    "id": "981e9cff-c9d5-4d4c-8e9a-ffab6fc4d763",
    "metadata": {},
    "outputs": [
@@ -2158,7 +2178,71 @@
    "id": "663ac598-dfd1-4a0c-bea4-0846af2dff4a",
    "metadata": {},
    "source": [
-    "To recap, our project goal is get our chatbot to provide advice on better sleep. For a moment, we were not sure what data format to use for this purpose. However, some production-ready datasets such as [MedQuad-MedicalQnADataset by keivalya](https://huggingface.co/datasets/keivalya/MedQuad-MedicalQnADataset) are comprised of **simple Q&A pairs** listed in a normal **CSV file**. We chose the same route (thankfully, LangChain packages a file loader for that - [here is an example of its use](https://betterprogramming.pub/build-a-chatbot-on-your-csv-data-with-langchain-and-openai-ed121f85f0cd))"
+    "To recap, our project goal is get our chatbot to provide advice on better sleep. For a moment, we were not sure what data format to use for this purpose. However, some production-ready datasets such as [MedQuad-MedicalQnADataset by keivalya](https://huggingface.co/datasets/keivalya/MedQuad-MedicalQnADataset) are comprised of **simple Q&A pairs** listed in a normal **CSV file**. We chose the same route (thankfully, LangChain packages a file loader for that - [here is an example of its use](https://betterprogramming.pub/build-a-chatbot-on-your-csv-data-with-langchain-and-openai-ed121f85f0cd)).\n",
+    "\n",
+    "Basically, let's try loading and chunking our CSV data first:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "id": "cb5f2311-d7fd-429e-964d-7b8e9d89c06e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_community.document_loaders.csv_loader import CSVLoader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "id": "90884185-c125-4f47-92ae-04f3ef3a62ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loader = CSVLoader(file_path=\"./data/BetterSleep_QnADataset.csv\")\n",
+    "\n",
+    "csv_data = loader.load()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "id": "8d024083-ae03-46ba-85dc-c1f315836194",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question: What sleep schedule is the most optimal?\n",
+      "Answer: Research has shown it is better to set fixed times for going to bed and waking up and then adhere to them even on weekends. Our bodies heavily rely on circadian rhythms to regulate sleep patterns. If you go to bed at the same time every day it helps your body to acquire a steady habit of production of melatonin prior to your bedtime. Melatonin is a very important hormone that is related to circadian rhythms, day and night cycles. Increased level of melatonin is shown to help falling asleep faster and having a more quality sleep.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# split it into chunks\n",
+    "text_splitter = CharacterTextSplitter(chunk_size=1024, chunk_overlap=64)\n",
+    "data = text_splitter.split_documents(csv_data)\n",
+    "\n",
+    "# load it into Chroma\n",
+    "clear_chroma_db(db)\n",
+    "db = Chroma.from_documents(data, embedding_function)\n",
+    "\n",
+    "# query it\n",
+    "query = \"What is the best sleep schedule?\"\n",
+    "docs = db.similarity_search(query)\n",
+    "\n",
+    "# print results\n",
+    "print(docs[0].page_content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e79f2283-c908-4d6d-9c2a-5d9fd6103065",
+   "metadata": {},
+   "source": [
+    "Great, clearly our CSV data has been ingested into the vector DB successfully, and querying it behaves as expected. Our dataset is small, therefore a simple similarity search should suffice. It must be noted, however, that had we needed to pick top `k` chunks with even more precision and relevance (e.g. from a very large database with hundreds of thousands of records), this technique could be made more advanced by combining it with a **Reranker** - basically, a separate DNN model that reorders the results taking a deeper look into the nuances of semantics (an example description of that can be found [here](https://superlinked.com/vectorhub/articles/optimizing-rag-with-hybrid-search-reranking))."
    ]
   }
  ],
