Created using Jupyter Lab

--- a/Llama2_RAG_bot.ipynb
+++ b/Llama2_RAG_bot.ipynb
@@ -8,7 +8,7 @@
     "# Introduction\n",
     "In this notebook, we will pick up where we have left in the [preparation notebook](https://github.com/shaaagri/iat481-nlp-proj/blob/main/LLama2_vanilla_bot.ipynb) and will add a vector store with a retriever to the pipeline. This should be enough to lay the framework to realize our intention - a chatbot powered by RAG (Retrieval Augmented Generation), which is, in essence, a special case of automated prompt engineering. Just a reminder, the specialized knowledge we plan to inject into the chatbot is concerned with sleep hygiene and related science-backed tips.\n",
     "\n",
-    "_Note_: this notebook is intended to be run locally in Jupyter and was never tested in Google Colab."
+    "**Note**: this notebook is intended to be run locally in Jupyter and was never tested in Google Colab."
    ]
   },
   {
