Created using Jupyter Lab

--- a/Llama2_RAG_bot.ipynb
+++ b/Llama2_RAG_bot.ipynb
@@ -54,7 +54,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "dae9f89b-742a-4b9f-89b7-53386f2493b1",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
