Created using Jupyter Lab

--- a/Llama2_RAG_bot.ipynb
+++ b/Llama2_RAG_bot.ipynb
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "id": "8d024083-ae03-46ba-85dc-c1f315836194",
    "metadata": {},
    "outputs": [
@@ -969,7 +969,10 @@
     "data = text_splitter.split_documents(csv_data)\n",
     "\n",
     "# load it into Chroma\n",
-    "clear_chroma_db(db)\n",
+    "try:\n",
+    "    clear_chroma_db(db)  # Empty the database (this line is ignored if it's not been initialized yet)\n",
+    "except NameError:\n",
+    "    pass\n",
     "db = Chroma.from_documents(data, embedding_function)\n",
     "\n",
     "# query it\n",
