--- a/Llama2_RAG_bot.ipynb
+++ b/Llama2_RAG_bot.ipynb
@@ -1044,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "id": "4ab37c6a-99a7-4800-930b-6d7373e4497a",
    "metadata": {},
    "outputs": [],
@@ -1052,8 +1052,8 @@
     "qa_chain = RetrievalQA.from_chain_type(\n",
     "    llm,\n",
     "\n",
-    "    # We use k=1 to always pick only the most relevant Q&A pair. Our dataset is small so that should suffice and we won't bloat the prompt\n",
-    "    retriever=db.as_retriever(search_kwargs={\"k\": 2}),\n",
+    "    # We try to pick only the most relevant Q&A pairs. Our dataset is small so that should suffice and we won't bloat the prompt\n",
+    "    retriever=db.as_retriever(search_kwargs={\"k\": 1}),\n",
     "    chain_type_kwargs={\"prompt\": prompt}\n",
     ")"
    ]
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "id": "080044cb-69ae-4a5e-b911-60072f57255a",
    "metadata": {},
    "outputs": [],
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 50,
    "id": "a502492b-3de0-42c8-a7ab-4c4251d09a2b",
    "metadata": {},
    "outputs": [
@@ -1095,12 +1095,12 @@
       "\u001b[32;1m\u001b[1;3m[chain/start]\u001b[0m \u001b[1m[1:chain:RetrievalQA > 3:chain:StuffDocumentsChain > 4:chain:LLMChain] Entering Chain run with input:\n",
       "\u001b[0m{\n",
       "  \"question\": \"Tell me some tips for the best sleep schedule\",\n",
-      "  \"context\": \"Question: What sleep schedule is the most optimal?\\nAnswer: Research has shown it is better to set fixed times for going to bed and waking up and then adhere to them even on weekends. Our bodies heavily rely on circadian rhythms to regulate sleep patterns. If you go to bed at the same time every day it helps your body to acquire a steady habit of production of melatonin prior to your bedtime. Melatonin is a very important hormone that is related to circadian rhythms, day and night cycles. Increased level of melatonin is shown to help falling asleep faster and having a more quality sleep.\\n\\nQuestion: What are the phases of sleep?\\nAnswer: When you sleep, you cycle through two phases of sleep: rapid eye movement (REM) and non-REM sleep. The cycle starts over every 80 to 100 minutes. Usually there are four to six cycles per night. You may wake up briefly between cycles.\"\n",
+      "  \"context\": \"Question: What sleep schedule is the most optimal?\\nAnswer: Research has shown it is better to set fixed times for going to bed and waking up and then adhere to them even on weekends. Our bodies heavily rely on circadian rhythms to regulate sleep patterns. If you go to bed at the same time every day it helps your body to acquire a steady habit of production of melatonin prior to your bedtime. Melatonin is a very important hormone that is related to circadian rhythms, day and night cycles. Increased level of melatonin is shown to help falling asleep faster and having a more quality sleep.\"\n",
       "}\n",
       "\u001b[32;1m\u001b[1;3m[llm/start]\u001b[0m \u001b[1m[1:chain:RetrievalQA > 3:chain:StuffDocumentsChain > 4:chain:LLMChain > 5:llm:LlamaCpp] Entering LLM run with input:\n",
       "\u001b[0m{\n",
       "  \"prompts\": [\n",
-      "    \"[INST]\\n<<SYS>>\\nYou are helpful, respectful, caring and honest assistant for question-answering tasks. You do not have expressions or emotions. You are objective and provide everything that is helpful to know given the question, but you are not chatty, be concise and do not use more than three sentences. Use the following pieces of retrieved context to answer the question to the best of your ability. If you don't know the answer, just say that you don't know.\\n<</SYS>>\\n\\nUSER: Tell me some tips for the best sleep schedule\\n\\nCONTEXT: Question: What sleep schedule is the most optimal?\\nAnswer: Research has shown it is better to set fixed times for going to bed and waking up and then adhere to them even on weekends. Our bodies heavily rely on circadian rhythms to regulate sleep patterns. If you go to bed at the same time every day it helps your body to acquire a steady habit of production of melatonin prior to your bedtime. Melatonin is a very important hormone that is related to circadian rhythms, day and night cycles. Increased level of melatonin is shown to help falling asleep faster and having a more quality sleep.\\n\\nQuestion: What are the phases of sleep?\\nAnswer: When you sleep, you cycle through two phases of sleep: rapid eye movement (REM) and non-REM sleep. The cycle starts over every 80 to 100 minutes. Usually there are four to six cycles per night. You may wake up briefly between cycles.\\n\\nASSISTANT: \\n[/INST]\"\n",
+      "    \"[INST]\\n<<SYS>>\\nYou are helpful, respectful, caring and honest assistant for question-answering tasks. You do not have expressions or emotions. You are objective and provide everything that is helpful to know given the question, but you are not chatty, be concise and do not use more than three sentences. Use the following pieces of retrieved context to answer the question to the best of your ability. If you don't know the answer, just say that you don't know.\\n<</SYS>>\\n\\nUSER: Tell me some tips for the best sleep schedule\\n\\nCONTEXT: Question: What sleep schedule is the most optimal?\\nAnswer: Research has shown it is better to set fixed times for going to bed and waking up and then adhere to them even on weekends. Our bodies heavily rely on circadian rhythms to regulate sleep patterns. If you go to bed at the same time every day it helps your body to acquire a steady habit of production of melatonin prior to your bedtime. Melatonin is a very important hormone that is related to circadian rhythms, day and night cycles. Increased level of melatonin is shown to help falling asleep faster and having a more quality sleep.\\n\\nASSISTANT: \\n[/INST]\"\n",
       "  ]\n",
       "}\n"
      ]
@@ -1116,8 +1116,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To get the best sleep schedule, it's important to set fixed times for going to bed and waking up and adhere to them consistently, even on weekends. This helps your body develop a steady habit of producing melatonin before bedtime, which can help you fall asleep faster and have a more restful night's sleep. Melatonin is a hormone that regulates circadian rhythms and is important for quality sleep.\n",
-      "In terms of the phases of sleep, there are two main types: rapid eye movement (REM) and non-REM sleep. The cycle repeats every 80 to 100 minutes, with four to six cycles per night. You may briefly wake up between cycles."
+      "Here are some tips for establishing the best sleep schedule:\n",
+      "1. Set fixed times for going to bed and waking up and adhere to them consistently, even on weekends.\n",
+      "2. Establish a regular sleep routine, such as reading a book or taking a warm bath, to signal to your body that it's time to sleep.\n",
+      "3. Create a sleep-conducive environment by ensuring your bedroom is dark, quiet, and cool.\n",
+      "I hope these tips are helpful in establishing a sleep schedule that works best for you. If you have any further questions, feel free to ask!"
      ]
     },
     {
@@ -1125,23 +1128,23 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "llama_print_timings:        load time =    4349.07 ms\n",
-      "llama_print_timings:      sample time =      37.15 ms /   158 runs   (    0.24 ms per token,  4253.49 tokens per second)\n",
-      "llama_print_timings: prompt eval time =   22337.83 ms /   338 tokens (   66.09 ms per token,    15.13 tokens per second)\n",
-      "llama_print_timings:        eval time =   17309.21 ms /   157 runs   (  110.25 ms per token,     9.07 tokens per second)\n",
-      "llama_print_timings:       total time =   40409.61 ms /   495 tokens\n"
+      "llama_print_timings:        load time =    3483.69 ms\n",
+      "llama_print_timings:      sample time =      30.34 ms /   132 runs   (    0.23 ms per token,  4351.27 tokens per second)\n",
+      "llama_print_timings: prompt eval time =     750.01 ms /    11 tokens (   68.18 ms per token,    14.67 tokens per second)\n",
+      "llama_print_timings:        eval time =   14213.77 ms /   131 runs   (  108.50 ms per token,     9.22 tokens per second)\n",
+      "llama_print_timings:       total time =   15556.39 ms /   142 tokens\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[36;1m\u001b[1;3m[llm/end]\u001b[0m \u001b[1m[1:chain:RetrievalQA > 3:chain:StuffDocumentsChain > 4:chain:LLMChain > 5:llm:LlamaCpp] [40.42s] Exiting LLM run with output:\n",
+      "\u001b[36;1m\u001b[1;3m[llm/end]\u001b[0m \u001b[1m[1:chain:RetrievalQA > 3:chain:StuffDocumentsChain > 4:chain:LLMChain > 5:llm:LlamaCpp] [15.57s] Exiting LLM run with output:\n",
       "\u001b[0m{\n",
       "  \"generations\": [\n",
       "    [\n",
       "      {\n",
-      "        \"text\": \"To get the best sleep schedule, it's important to set fixed times for going to bed and waking up and adhere to them consistently, even on weekends. This helps your body develop a steady habit of producing melatonin before bedtime, which can help you fall asleep faster and have a more restful night's sleep. Melatonin is a hormone that regulates circadian rhythms and is important for quality sleep.\\nIn terms of the phases of sleep, there are two main types: rapid eye movement (REM) and non-REM sleep. The cycle repeats every 80 to 100 minutes, with four to six cycles per night. You may briefly wake up between cycles.\",\n",
+      "        \"text\": \"Here are some tips for establishing the best sleep schedule:\\n1. Set fixed times for going to bed and waking up and adhere to them consistently, even on weekends.\\n2. Establish a regular sleep routine, such as reading a book or taking a warm bath, to signal to your body that it's time to sleep.\\n3. Create a sleep-conducive environment by ensuring your bedroom is dark, quiet, and cool.\\nI hope these tips are helpful in establishing a sleep schedule that works best for you. If you have any further questions, feel free to ask!\",\n",
       "        \"generation_info\": null,\n",
       "        \"type\": \"Generation\"\n",
       "      }\n",
@@ -1150,17 +1153,17 @@
       "  \"llm_output\": null,\n",
       "  \"run\": null\n",
       "}\n",
-      "\u001b[36;1m\u001b[1;3m[chain/end]\u001b[0m \u001b[1m[1:chain:RetrievalQA > 3:chain:StuffDocumentsChain > 4:chain:LLMChain] [40.42s] Exiting Chain run with output:\n",
+      "\u001b[36;1m\u001b[1;3m[chain/end]\u001b[0m \u001b[1m[1:chain:RetrievalQA > 3:chain:StuffDocumentsChain > 4:chain:LLMChain] [15.57s] Exiting Chain run with output:\n",
       "\u001b[0m{\n",
-      "  \"text\": \"To get the best sleep schedule, it's important to set fixed times for going to bed and waking up and adhere to them consistently, even on weekends. This helps your body develop a steady habit of producing melatonin before bedtime, which can help you fall asleep faster and have a more restful night's sleep. Melatonin is a hormone that regulates circadian rhythms and is important for quality sleep.\\nIn terms of the phases of sleep, there are two main types: rapid eye movement (REM) and non-REM sleep. The cycle repeats every 80 to 100 minutes, with four to six cycles per night. You may briefly wake up between cycles.\"\n",
+      "  \"text\": \"Here are some tips for establishing the best sleep schedule:\\n1. Set fixed times for going to bed and waking up and adhere to them consistently, even on weekends.\\n2. Establish a regular sleep routine, such as reading a book or taking a warm bath, to signal to your body that it's time to sleep.\\n3. Create a sleep-conducive environment by ensuring your bedroom is dark, quiet, and cool.\\nI hope these tips are helpful in establishing a sleep schedule that works best for you. If you have any further questions, feel free to ask!\"\n",
       "}\n",
-      "\u001b[36;1m\u001b[1;3m[chain/end]\u001b[0m \u001b[1m[1:chain:RetrievalQA > 3:chain:StuffDocumentsChain] [40.43s] Exiting Chain run with output:\n",
+      "\u001b[36;1m\u001b[1;3m[chain/end]\u001b[0m \u001b[1m[1:chain:RetrievalQA > 3:chain:StuffDocumentsChain] [15.57s] Exiting Chain run with output:\n",
       "\u001b[0m{\n",
-      "  \"output_text\": \"To get the best sleep schedule, it's important to set fixed times for going to bed and waking up and adhere to them consistently, even on weekends. This helps your body develop a steady habit of producing melatonin before bedtime, which can help you fall asleep faster and have a more restful night's sleep. Melatonin is a hormone that regulates circadian rhythms and is important for quality sleep.\\nIn terms of the phases of sleep, there are two main types: rapid eye movement (REM) and non-REM sleep. The cycle repeats every 80 to 100 minutes, with four to six cycles per night. You may briefly wake up between cycles.\"\n",
+      "  \"output_text\": \"Here are some tips for establishing the best sleep schedule:\\n1. Set fixed times for going to bed and waking up and adhere to them consistently, even on weekends.\\n2. Establish a regular sleep routine, such as reading a book or taking a warm bath, to signal to your body that it's time to sleep.\\n3. Create a sleep-conducive environment by ensuring your bedroom is dark, quiet, and cool.\\nI hope these tips are helpful in establishing a sleep schedule that works best for you. If you have any further questions, feel free to ask!\"\n",
       "}\n",
-      "\u001b[36;1m\u001b[1;3m[chain/end]\u001b[0m \u001b[1m[1:chain:RetrievalQA] [40.46s] Exiting Chain run with output:\n",
+      "\u001b[36;1m\u001b[1;3m[chain/end]\u001b[0m \u001b[1m[1:chain:RetrievalQA] [15.59s] Exiting Chain run with output:\n",
       "\u001b[0m{\n",
-      "  \"result\": \"To get the best sleep schedule, it's important to set fixed times for going to bed and waking up and adhere to them consistently, even on weekends. This helps your body develop a steady habit of producing melatonin before bedtime, which can help you fall asleep faster and have a more restful night's sleep. Melatonin is a hormone that regulates circadian rhythms and is important for quality sleep.\\nIn terms of the phases of sleep, there are two main types: rapid eye movement (REM) and non-REM sleep. The cycle repeats every 80 to 100 minutes, with four to six cycles per night. You may briefly wake up between cycles.\"\n",
+      "  \"result\": \"Here are some tips for establishing the best sleep schedule:\\n1. Set fixed times for going to bed and waking up and adhere to them consistently, even on weekends.\\n2. Establish a regular sleep routine, such as reading a book or taking a warm bath, to signal to your body that it's time to sleep.\\n3. Create a sleep-conducive environment by ensuring your bedroom is dark, quiet, and cool.\\nI hope these tips are helpful in establishing a sleep schedule that works best for you. If you have any further questions, feel free to ask!\"\n",
       "}\n"
      ]
     }
